add swagger section register user
